# bilibili-ai-client-gui

./: .gitignore  LICENSE  README.md  README_EN.md  bilibili_ai_client_gui.spec  bilibili_login.py  config.py  database.py  main.py  mcp_server.py  message_poller.py  openclaw_trigger.py  pyinstaller.spec  pyproject.toml  requirements.txt  services.py  webhook_server.py
bilibili-ai-client/: TESTING.md  bilibili_ai_client.spec  bilibili_login.py  check_db.py  config.py  database.py  main.py  mcp_server.py  message_poller.py  openclaw_trigger.py  test_api.py  test_callback.py  test_full.py  test_subtitle.py  webhook_server.py
bilibili-ai-client-gui/: CLAUDE.md  README.md  bilibili_login.py  config.py  database.py  main.py  message_poller.py  openclaw_trigger.py  requirements.txt
bilibili-ai-client-gui/docs/: API.md  PROGRESS.md  bug-list.md  design-摘要自动推送.md  prompt.md  tasks-cookie加密.md  tasks-mcp-api扩展.md  tasks-失败任务重试.md  tasks-摘要自动推送.md
bilibili-ai-client-gui/gui/: main_window.py
bilibili-ai-client-gui/tests/: conftest.py
bilibili-ai-client-gui/utils/: __init__.py  app_data.py  crypto.py  logger.py
bilibili-ai-client/docs/: API.md  design-cookie加密.md  design-mcp-api扩展.md  design-pyqt6-gui.md  (+1 more)
data/: README.md
docs/: API.md  GUI现代化改造prompt.md  PRD-GUI现代化改造.md  design-GUI现代化改造-详细设计.md  design-失败任务重试.md  design-摘要自动推送.md  tasks-GUI现代化改造.md  test-plan.md
gui/: app.py  main_window.py  signal_bus.py  theme.py
tests/: conftest.py  test_integration.py  test_openclaw_trigger.py
utils/: logger.py  subtitle_extractor.py
whisper_model/: README.md
(+29 files in other folders)
