[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-ai-client"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "bilibili-api>=6.4.0",
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "sqlite-utils>=3.35",
    "mcp>=0.1.0",
    "loguru>=0.7.0",
    "qrcode>=7.4.2",
    "Pillow>=10.0.0",
    "anyio>=4.0.0",
    "aiohttp>=3.9.0",
    "yt-dlp>=2024.0.0",
    "faster-whisper>=1.0.0",
    "PyInstaller>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "network: marks tests that require network access",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120
target-version = "py311"